--- a/labs/lab2/waph-suvarnrk.html
+++ b/labs/lab2/waph-suvarnrk.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href=https://waph-uc.github.io/style1.css>
+	<style>
+		.button{
+			background-color:green;
+			border: none;
+			color: white;
+			padding: 5px;
+			text-align: center;
+			text-decoration: none;
+			display: inline-block;
+			font-size: 12px;
+			margin: 4px 2px;
+			cursor: pointer;
+		}
+		.round{border-radius: 8px;}
+		#response{background-color: orange;}
+	</style>
 	<meta charset="utf-8">
 	<title>WAPH- Ruthvik Suvarnakanti- IT student</title>
 </head>
+
 <body>
+	<div class="container wraper">
 	<div id="top">
 		<h1> This is web application programming and hacking lab</h1>
 		<h2>Performing front end development</h2>
@@ -13,7 +32,107 @@
 	</div>
 	<div id="menubar">
 		<h3> Student: Ruthvik Suvarnakanti</h3>
+
+		<div id="email" onclick="showhideEmail()">My Mail</div>
+		<script src="email.js"></script>
+		
 		<img src="images/headshot.JPEG" alt="My Headshot" width="50">
+		<div id="digit-clock"></div>
+		
+
+		<canvas id="canvas" width="150" height="150"
+style="background-color:#333">
+</canvas>
+
+
+
+<script>
+const canvas = document.getElementById("canvas");
+const ctx = canvas.getContext("2d");
+let radius = canvas.height / 2;
+ctx.translate(radius, radius);
+radius = radius * 0.90
+setInterval(drawClock, 1000);
+
+function drawClock() {
+  drawFace(ctx, radius);
+  drawNumbers(ctx, radius);
+  drawTime(ctx, radius);
+}
+
+function drawFace(ctx, radius) {
+  const grad = ctx.createRadialGradient(0,0,radius*0.95, 0,0,radius*1.05);
+  grad.addColorStop(0, '#333');
+  grad.addColorStop(0.5, 'white');
+  grad.addColorStop(1, '#333');
+  ctx.beginPath();
+  ctx.arc(0, 0, radius, 0, 2*Math.PI);
+  ctx.fillStyle = 'white';
+  ctx.fill();
+  ctx.strokeStyle = grad;
+  ctx.lineWidth = radius*0.1;
+  ctx.stroke();
+  ctx.beginPath();
+  ctx.arc(0, 0, radius*0.1, 0, 2*Math.PI);
+  ctx.fillStyle = '#333';
+  ctx.fill();
+}
+
+function drawNumbers(ctx, radius) {
+  ctx.font = radius*0.15 + "px arial";
+  ctx.textBaseline="middle";
+  ctx.textAlign="center";
+  for(let num = 1; num < 13; num++){
+    let ang = num * Math.PI / 6;
+    ctx.rotate(ang);
+    ctx.translate(0, -radius*0.85);
+    ctx.rotate(-ang);
+    ctx.fillText(num.toString(), 0, 0);
+    ctx.rotate(ang);
+    ctx.translate(0, radius*0.85);
+    ctx.rotate(-ang);
+  }
+}
+
+function drawTime(ctx, radius){
+    const now = new Date();
+    let hour = now.getHours();
+    let minute = now.getMinutes();
+    let second = now.getSeconds();
+    //hour
+    hour=hour%12;
+    hour=(hour*Math.PI/6)+
+    (minute*Math.PI/(6*60))+
+    (second*Math.PI/(360*60));
+    drawHand(ctx, hour, radius*0.5, radius*0.07);
+    //minute
+    minute=(minute*Math.PI/30)+(second*Math.PI/(30*60));
+    drawHand(ctx, minute, radius*0.8, radius*0.07);
+    // second
+    second=(second*Math.PI/30);
+    drawHand(ctx, second, radius*0.9, radius*0.02);
+}
+
+function drawHand(ctx, pos, length, width) {
+    ctx.beginPath();
+    ctx.lineWidth = width;
+    ctx.lineCap = "round";
+    ctx.moveTo(0,0);
+    ctx.rotate(pos);
+    ctx.lineTo(0, -length);
+    ctx.stroke();
+    ctx.rotate(-pos);
+}
+</script>
+
+
+
+		<script type="text/javascript">
+			function displayTime(){
+				document.getElementById('digit-clock').innerHTML ="Current time:" + new Date();
+			}
+			setInterval(displayTime,500);
+		</script>
 	</div>
 	<div id="main">
 		<p> this is a simple html page</p>
@@ -30,12 +149,51 @@
 
 		</div>
 		<div>
-			<i> Form with an HTTP GET request</i>
+			<i> Form with an HTTP POST request</i>
 			<form action="/echo.php" method="GET" name="echo_post">
-				Your Input: <input name="input">
+				Your Input: <input name="input" onkeypress="console.log('You pressed a key')">
 				<input type="submit" value="Submit">
+				
 			</form>
 		</div>
+
+		<div>
+			<i> Ajax Requests</i><br>
+		Your Input: 
+		<input name="data"
+		onkeypress="console.log('You have pressed a key ')" id="data">
+		<input type="button" class="button round" value="Ajax Echo" onclick="getEcho()">
+		<div id="response"></div>
 	</div>
+
+	<script type="text/javascript">
+		function getEcho(){
+			var input=document.getElementById("data").value;
+			if(input.length==0){
+				return;
+			}
+			var xhttp=new XMLHttpRequest();
+			xhttp.onreadystatechange=function(){
+				if(this.readyState==4 && this.status==200){
+					console.log("Received data="+xhttp.responseText);
+					document.getElementById("response").innerText=
+					"Response from server:"+xhttp.responseText;
+				}
+			}
+
+			xhttp.open("GET", "echo.php?input="+input,true);
+			xhttp.send();
+			document.getElementById("data").value="";
+
+		}
+	</script>
+
+
+		<hr>
+		<b>Experiments with Javascript</b><br>
+		<i>Inlined JavaScript</i>
+		<div id="date" onclick="document.getElementById('date').innerHTML= Date()"> Click here to Show Date()</div>
+	</div>
+</div>
 
 </body>
