--- a/labs/lab2/waph-suvarnrk.html
+++ b/labs/lab2/waph-suvarnrk.html
@@ -186,6 +186,36 @@ function drawHand(ctx, pos, length, width) {
 			document.getElementById("data").value="";
 
 		}
+		function getJqueryAjax(){
+				var input=$("#data").val();
+				if(input.length==0)
+					return;
+				$.get("echo.php?data="+input,
+				      function(result){
+					      printResult(result);
+						});
+				$("#data").val("");
+			}
+			function getJqueryAjaxPost(){
+				var input=$("#data").val();
+				if(input.length==0)
+					return;
+				$.post("echo.php",{data:input},function(result){
+					printResult(result);
+					});
+				$("#data").val("");
+			}
+			function printResult(result){
+			$("#response").html(result);
+			}
+			$.get("https://v2.jokeapi.dev/joke/Programming?type=single",function(result){
+				$("#response").html("Programming joke of the day: " +result.joke);
+				});
+			async function guessAge(name){
+				const response= await fetch("https://api.agify.io/?name="+name);
+				const result= await response.json();
+				$("#response").html("Hello "+name+" ,your age should be "+result.age);
+			}
 	</script>
 
 
