--- a/labs/lab2/waph-suvarnrk.html
+++ b/labs/lab2/waph-suvarnrk.html
@@ -1,200 +1,126 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href=https://waph-uc.github.io/style1.css>
+	<link rel="stylesheet" type="text/css" href="https://waph-uc.github.io/style1.css">
 	<style>
 		.button{
-			background-color:green;
-			border: none;
-			color: white;
-			padding: 5px;
-			text-align: center;
-			text-decoration: none;
-			display: inline-block;
-			font-size: 12px;
-			margin: 4px 2px;
-			cursor: pointer;
+			background-color:#4CAF50;
+			border:none;
+			color:white;
+			padding:5px;
+			text-align:center;
+			text-decoration:none;
+			display:inline-block;
+			font-size:12px;
+			margin:4px2px;
+			cursor:pointer;
 		}
-		.round{border-radius: 8px;}
-		#response{background-color: orange;}
+		.round{
+			border-radius:8px;
+		}
+		#response{
+			background-color:#ff9800;
+		}
 	</style>
-	<meta charset="utf-8">
-	<title>WAPH- Ruthvik Suvarnakanti- IT student</title>
+<meta charset="utf-8">
+<title>WAPH- Ruthvik Suvarnakanti </title>
 </head>
-
 <body>
-	<div class="container wraper">
+<div class="container wrapper">
 	<div id="top">
-		<h1> This is web application programming and hacking lab</h1>
-		<h2>Performing front end development</h2>
-		<h3> Instructor: Dr. Phu Phung</h3>
-
+		<h1>Web Application Programming and Hacking</h1>
+		<h2>Front End Development Lab </h2>
+		<h3>Instructor : Dr Phu Phung</h3>
 	</div>
-	<div id="menubar">
-		<h3> Student: Ruthvik Suvarnakanti</h3>
-
-		<div id="email" onclick="showhideEmail()">My Mail</div>
-		<script src="email.js"></script>
-		
-		<img src="images/headshot.JPEG" alt="My Headshot" width="50">
-		<div id="digit-clock"></div>
-		
-
-		<canvas id="canvas" width="150" height="150"
-style="background-color:#333">
-</canvas>
-
-
-
-<script>
-const canvas = document.getElementById("canvas");
-const ctx = canvas.getContext("2d");
-let radius = canvas.height / 2;
-ctx.translate(radius, radius);
-radius = radius * 0.90
-setInterval(drawClock, 1000);
-
-function drawClock() {
-  drawFace(ctx, radius);
-  drawNumbers(ctx, radius);
-  drawTime(ctx, radius);
-}
-
-function drawFace(ctx, radius) {
-  const grad = ctx.createRadialGradient(0,0,radius*0.95, 0,0,radius*1.05);
-  grad.addColorStop(0, '#333');
-  grad.addColorStop(0.5, 'white');
-  grad.addColorStop(1, '#333');
-  ctx.beginPath();
-  ctx.arc(0, 0, radius, 0, 2*Math.PI);
-  ctx.fillStyle = 'white';
-  ctx.fill();
-  ctx.strokeStyle = grad;
-  ctx.lineWidth = radius*0.1;
-  ctx.stroke();
-  ctx.beginPath();
-  ctx.arc(0, 0, radius*0.1, 0, 2*Math.PI);
-  ctx.fillStyle = '#333';
-  ctx.fill();
-}
-
-function drawNumbers(ctx, radius) {
-  ctx.font = radius*0.15 + "px arial";
-  ctx.textBaseline="middle";
-  ctx.textAlign="center";
-  for(let num = 1; num < 13; num++){
-    let ang = num * Math.PI / 6;
-    ctx.rotate(ang);
-    ctx.translate(0, -radius*0.85);
-    ctx.rotate(-ang);
-    ctx.fillText(num.toString(), 0, 0);
-    ctx.rotate(ang);
-    ctx.translate(0, radius*0.85);
-    ctx.rotate(-ang);
-  }
-}
-
-function drawTime(ctx, radius){
-    const now = new Date();
-    let hour = now.getHours();
-    let minute = now.getMinutes();
-    let second = now.getSeconds();
-    //hour
-    hour=hour%12;
-    hour=(hour*Math.PI/6)+
-    (minute*Math.PI/(6*60))+
-    (second*Math.PI/(360*60));
-    drawHand(ctx, hour, radius*0.5, radius*0.07);
-    //minute
-    minute=(minute*Math.PI/30)+(second*Math.PI/(30*60));
-    drawHand(ctx, minute, radius*0.8, radius*0.07);
-    // second
-    second=(second*Math.PI/30);
-    drawHand(ctx, second, radius*0.9, radius*0.02);
-}
-
-function drawHand(ctx, pos, length, width) {
-    ctx.beginPath();
-    ctx.lineWidth = width;
-    ctx.lineCap = "round";
-    ctx.moveTo(0,0);
-    ctx.rotate(pos);
-    ctx.lineTo(0, -length);
-    ctx.stroke();
-    ctx.rotate(-pos);
-}
-</script>
-
-
-
-		<script type="text/javascript">
-			function displayTime(){
-				document.getElementById('digit-clock').innerHTML ="Current time:" + new Date();
-			}
-			setInterval(displayTime,500);
-		</script>
-	</div>
-	<div id="main">
-		<p> this is a simple html page</p>
-		Using the <a href="https://www.w3schools.com/html/"> W3Schools template </a>
-
-		<hr>
-		<b>Interaction with forms</b>
-		<div>
-			<i> Form with an HTTP GET request</i>
-			<form action="/echo.php" method="GET">
-				Your Input: <input name="input">
-				<input type="submit" value="Submit">
-			</form>
-
+	<div class="wrapper">
+		<div id="menubar">
+			<h3>Student : Ruthvik Suvarnakanti</h3>
+			<div id="email" onclick="showhideEmail()">Show my Email</div>
+			<script type="text/javascript" src="email.js"></script>
+			<img src="images/headshot.jpg" alt="Tulasiram headshot" width="50">
+			<div id="digital-clock"></div>
+			<canvas id="analog-clock" width="150" height="150" style="background-color:#999"></canvas>
+			<script src="https://waph-uc.github.io/clock.js"></script>
 		</div>
-		<div>
-			<i> Form with an HTTP POST request</i>
-			<form action="/echo.php" method="GET" name="echo_post">
-				Your Input: <input name="input" onkeypress="console.log('You pressed a key')">
-				<input type="submit" value="Submit">
-				
-			</form>
-		</div>
-
-		<div>
-			<i> Ajax Requests</i><br>
-		Your Input: 
-		<input name="data"
-		onkeypress="console.log('You have pressed a key ')" id="data">
-		<input type="button" class="button round" value="Ajax Echo" onclick="getEcho()">
-		<div id="response"></div>
-			<input class="button round" type="submit" value="JQuery Ajax Echo" onclick="getJqueryAjax()">
+		<div id="main">
+			<p>A Simple HTML Page</p>
+			Using the <a href="https://www.w3schools.com/html">W3 Schools Template</a>
+			<hr>
+			<b>Interaction with HTTP Forms</b>
+			<div>
+				<i>Form with HTTP GET Request</i>
+				<form action="/echo.php" method="GET">
+				<lable for="data">Enter the input text</lable>
+				<input type="text" name="data" onkeyup="console.log('you have clicked a Key')">
+				<input type="submit" value="submit">
+				</form>
+			</div>
+			<div>
+				<i>Form with HTTP POST Request</i>
+				<form action="/echo.php" method="POST">
+				<lable for="data">Enter the input text</lable>
+				<input type="text" name="data" onkeyup="console.log('you have clicked a Key')">
+				<input type="submit" value="submit">
+				</form>
+			</div>
+			<div>
+				<i>AJAX Requests</i><br>
+				<lable for="data">Enter the input text</lable>
+				<input type="text" name="data" id="data">
+				<input class="button round" type="submit" value="Ajax Echo" onclick="getEcho()">
+				<input class="button round" type="submit" value="JQuery Ajax Echo" onclick="getJqueryAjax()">
 				<input class="button round" type="submit" value="JQuery Ajax Echo Post" onclick="getJqueryAjaxPost()">
 				<input class="button round" type="submit" value="Guess Age" onclick="guessAge($('#data').val())">
 				<div id="response"></div>
+			</div>
+			<hr>
+				<div>
+				<b>Experiments with JavaScript code</b><br>
+				<i>Inlined JavaScript</i>
+				<div id="inlineDate" onClick="document.getElementById('inlineDate').innerHTML=Date()">Click to dsplay time and date</div>
+				</div>
+		</div>
 	</div>
-		<script src="https://code.jquery.com/jquery-3.7.1.min.js" 
+</div>
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js" 
 		integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
 		crossorigin="anonymous"></script>
-	
-
-	<script type="text/javascript">
-		function getEcho(){
-			var input=document.getElementById("data").value;
-			if(input.length==0){
-				return;
-			}
-			var xhttp=new XMLHttpRequest();
-			xhttp.onreadystatechange=function(){
-				if(this.readyState==4 && this.status==200){
-					console.log("Received data="+xhttp.responseText);
-					document.getElementById("response").innerText=
-					"Response from server:"+xhttp.responseText;
+	<script>
+		function displayTime() {
+			document.getElementById('digital-clock').innerHTML=" The current Time is : "+ Date();
+		}
+		setInterval(displayTime,500);
+	</script>
+	<script type=text/javascript>
+			var canvas=document.getElementById("analog-clock");
+			var ctx=canvas.getContext("2d");
+			var radius = canvas.height/2;
+			ctx.translate(radius,radius);
+			radius=radius*0.90;
+			setInterval(drawClock,1000);
+			function drawClock(){
+				drawFace(ctx,radius);
+				drawNumbers(ctx,radius);
+				drawTime(ctx,radius);
 				}
+			function getEcho(){
+			var input = document.getElementById("data").value;
+			if(input.length==0){
+			return ;
 			}
-
-			xhttp.open("GET", "echo.php?input="+input,true);
+			var xhttp = new XMLHttpRequest();
+			xhttp.onreadystatechange = function(){
+		//alert("readyState "+ this.readyState +", status "+this.status+", statusText= "+this.statusText);
+			if(this.readyState==4 && this.status==200){
+				console.log("Received data= "+xhttp.responseText);
+				document.getElementById("response").innerHTML= xhttp.responseText;
+			}
+			}
+			xhttp.open("GET", "echo.php?data="+input, true);
 			xhttp.send();
 			document.getElementById("data").value="";
-
-		}
-		function getJqueryAjax(){
+			}
+			function getJqueryAjax(){
 				var input=$("#data").val();
 				if(input.length==0)
 					return;
@@ -219,22 +145,12 @@ function drawHand(ctx, pos, length, width) {
 			$.get("https://v2.jokeapi.dev/joke/Programming?type=single",function(result){
 				$("#response").html("Programming joke of the day: " +result.joke);
 				});
-
 			async function guessAge(name){
 				const response= await fetch("https://api.agify.io/?name="+name);
 				const result= await response.json();
 				$("#response").html("Hello "+name+" ,your age should be "+result.age);
 			}
-			
-		
 	</script>
-
-
-		<hr>
-		<b>Experiments with Javascript</b><br>
-		<i>Inlined JavaScript</i>
-		<div id="date" onclick="document.getElementById('date').innerHTML= Date()"> Click here to Show Date()</div>
-	</div>
-</div>
-
+		
 </body>
+</html>
