--- a/labs/lab2/waph-suvarnrk.html
+++ b/labs/lab2/waph-suvarnrk.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	
 	<link rel="stylesheet" href=https://waph-uc.github.io/style1.css>
 	<style>
 		.button{
@@ -219,14 +220,18 @@ function drawHand(ctx, pos, length, width) {
 			$.get("https://v2.jokeapi.dev/joke/Programming?type=single",function(result){
 				$("#response").html("Programming joke of the day: " +result.joke);
 				});
-
-			async function guessAge(name){
-				const response= await fetch("https://api.agify.io/?name="+name);
-				const result= await response.json();
-				$("#response").html("Hello "+name+" ,your age should be "+result.age);
-			}
+			
+			
 			
 		
+	</script>
+	<script type="text/javascript">
+		async function guessAge(name){
+				const response= await fetch("https://api.agify.io/?name="+name);
+				const result= await response.json();
+				console.log(result);
+				$("#response").html("Hello "+name+" ,your age should be "+result.age);
+			}
 	</script>
 
 
