--- a/labs/lab2/waph-suvarnrk.html
+++ b/labs/lab2/waph-suvarnrk.html
@@ -227,7 +227,7 @@ function drawHand(ctx, pos, length, width) {
 	</script>
 	<script type="text/javascript">
 		async function guessAge(name){
-				const response= await fetch("https://api.agify.io/?name="+name);
+				const response= await fetch("https://api.agify.io/?name="+name+"&name="+name);
 				const result= await response.json();
 				console.log(result);
 				$("#response").html("Hello "+name+" ,your age should be "+result.age);
